--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
     
     <section class="section">
         <h1 class="title">나의 얼굴은 조선시대에 어떤계층이었을까?</h1>
+
+            <ins class="kakao_ad_area" style="display:none;"
+    data-ad-unit = "DAN-HrWt73o4beJWTrNT"
+    data-ad-width = "300"
+    data-ad-height = "250"></ins>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+  
     </section>
 
     <h3 class="pb-2 d-flex justify-content-center">성별을 선택하세요</h3>
