--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>조선시대 나의 얼굴은?</title>
-    <link rel="alternate" hreflang="ko" href="" />
-    <link rel="alternate" hreflang="en" href="" />
-    <link rel="alternate" hreflang="es" href="" />
-    <link rel="alternate" hreflang="ja" href="" />
-    <link rel="alternate" hreflang="zh" href="" />
-    <link rel="alternate" hreflang="vi" href="" />
-    <link rel="alternate" hreflang="id" href="" />
-    <link rel="alternate" hreflang="it" href="" />
-    <link rel="alternate" hreflang="th" href="" />
+    <link rel="alternate" hreflang="ko" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="en" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="es" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="ja" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="zh" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="vi" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="id" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="it" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="th" href="https://josun-face-test.netlify.app/" />
     <link rel="alternate" hreflang="x-default" href="" />
     <link rel="stylesheet" href="../../style.css">
-    <meta property="og:image" content="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fk.kakaocdn.net%2Fdn%2Fc0eq42%2FbtqCQpiFhFn%2F8KPaOP9q8PXpJFRL7if55K%2Fimg.jpg" />
     <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
