--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>조선시대 나의 얼굴은?</title>
-    <link rel="alternate" hreflang="ko" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="en" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="es" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="ja" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="zh" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="vi" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="id" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="it" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="th" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="x-default" href="" />
+    <link rel="inter" hreflang="ko" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="en" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="es" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="ja" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="zh" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="vi" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="id" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="it" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="th" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="x-default" href="" />
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -124,7 +124,11 @@
         }
     </script>
     
-  
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script>
         function readURL(input) {
             if (input.files && input.files[0]) {
