--- a/index.html
+++ b/index.html
@@ -5,19 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>조선시대 나의 얼굴은?</title>
-    <link rel="inter" hreflang="ko" href="https://josun-face-test.netlify.app/" />
-    <link rel="inter" hreflang="en" href="https://josun-face-test.netlify.app/" />
-    <link rel="inter" hreflang="es" href="https://josun-face-test.netlify.app/" />
-    <link rel="inter" hreflang="ja" href="https://josun-face-test.netlify.app/" />
-    <link rel="inter" hreflang="zh" href="https://josun-face-test.netlify.app/" />
-    <link rel="inter" hreflang="vi" href="https://josun-face-test.netlify.app/" />
-    <link rel="inter" hreflang="id" href="https://josun-face-test.netlify.app/" />
-    <link rel="inter" hreflang="it" href="https://josun-face-test.netlify.app/" />
-    <link rel="inter" hreflang="th" href="https://josun-face-test.netlify.app/" />
-    <link rel="inter" hreflang="x-default" href="" />
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -75,6 +63,7 @@
         </div>
         <p class="d-flex align-items-center pl-3">남자</p>
     </section>
+    <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <div class="mt-3 container file-upload">
         <div class="image-upload-wrap">
             <input class="file-upload-input" type='file' onchange="readURL(this);" accept="image/*" />
