--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>조선시대 나의 얼굴은?</title>
+    <link rel="inter" hreflang="ko" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="en" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="es" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="ja" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="zh" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="vi" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="id" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="it" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="th" href="https://josun-face-test.netlify.app/" />
+    <link rel="inter" hreflang="x-default" href="" />
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -30,7 +43,7 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '282135873128567');
+    fbq('init', '');
     fbq('track', 'PageView');
   </script>
   
@@ -41,13 +54,6 @@
     
     <section class="section">
         <h1 class="title">나의 얼굴은 조선시대에 어떤계층이었을까?</h1>
-
-            <ins class="kakao_ad_area" style="display:none;"
-    data-ad-unit = "DAN-HrWt73o4beJWTrNT"
-    data-ad-width = "300"
-    data-ad-height = "250"></ins>
-    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-  
     </section>
 
     <h3 class="pb-2 d-flex justify-content-center">성별을 선택하세요</h3>
