--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '');
+    fbq('init', '282135873128567');
     fbq('track', 'PageView');
   </script>
   
@@ -54,6 +54,7 @@
     
     <section class="section">
         <h1 class="title">나의 얼굴은 조선시대에 어떤계층이었을까?</h1>
+
     </section>
 
     <h3 class="pb-2 d-flex justify-content-center">성별을 선택하세요</h3>
