--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
 <body>
     
     <section class="section">
+
+
         <h1 class="title">나의 얼굴은 조선시대에 어떤계층이었을까?</h1>
+        
+        <ins class="kakao_ad_area" style="display:none;"
+    data-ad-unit = "DAN-8uoI1KMqoWsLUx6P"
+    data-ad-width = "300"
+    data-ad-height = "250"></ins>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 
     </section>
 
