--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
     data-ad-height = "250"></ins>
     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 
-    
+        <ins class="kakao_ad_area" style="display:none;"
+    data-ad-unit = "DAN-Sf0sBzsRuGy1xvsK"
+    data-ad-width = "250"
+    data-ad-height = "250"></ins>
+    <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 
     <h3 class="pb-2 d-flex justify-content-center">성별을 선택하세요</h3>
     <section class="d-flex justify-content-center">
