--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <script type="text/javascript">
         let URL;
         const urlMale = "https://teachablemachine.withgoogle.com/models/OmzrwvUru/";
-        const urlFemale = "https://teachablemachine.withgoogle.com/models/wlIMXFZAb/";
+        const urlFemale = "https://teachablemachine.withgoogle.com/models/jXoY-JutX/";
         let model, webcam, labelContainer, maxPredictions;
         async function init() {
             if (document.getElementById("gender").checked) {
@@ -273,7 +273,7 @@
                         break;
                     case "기생":
                         resultTitle = "조선시대 미스코리아 기생!!"
-                        resultExplain = "술자리에서 노래나 춤으로 흥을 돋우는 것을 직업, 조선시대의 최고로 '이쁜여성'이 가지는 직업 내 수청을 들라!!!!!!!!!"
+                        resultExplain = "술자리에서 노래나 춤으로 흥을 돋우는 것을 직업, 조선시대의 최고로 '이쁜여성'이 가지는 직업 벼슬을 꿈꿀수도?????"
                         gtag('event', '여자 결과 기생', {'event_category': '여자 결과'});
                         break;
                     case "노비":
