--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="kakao-ad-area1">
         <ins class="kakao_ad_area" style="display:none;"
     data-ad-unit = "DAN-8uoI1KMqoWsLUx6P"
-    data-ad-width = "300"
-    data-ad-height = "250"></ins>
+    data-ad-width = "100%"
+    data-ad-height = "180"></ins>
     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     </div>
 
