--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     data-ad-height = "180"></ins>
     <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     </div>
+    
 
 
     <h3 class="pb-2 d-flex justify-content-center">성별을 선택하세요</h3>
@@ -90,16 +91,13 @@
                 <h3 class="mb-5 pb-5 pt-4  upload-text">사진을 업로드 하여 주세요.</h3>
             </div>
 
-            <div>
+            <div class="kakao_ad_area2">
                 <ins class="kakao_ad_area2" style="display:none;"
             data-ad-unit = "DAN-Sf0sBzsRuGy1xvsK"
             data-ad-width = "764"
             data-ad-height = "180"></ins>
             <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
-            </div>  
-
-
-        </div>
+        
         <div class="file-upload-content">
             <img class="file-upload-image" id="face-image" src="#" alt="your image" />
             <div id="loading" class="animated bounce">
