--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
     </script>
     <script>
         var disqus_config = function () {
-            this.page.url = "https://josun-face-test.netlify.app/";  // Replace PAGE_URL with your page's canonical URL variable
-            this.page.identifier = "ko"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            this.page.url = "https://josun-face-test.netlify.app/";  
+            this.page.identifier = "ko"; 
         };
         (function() {
         var d = document,
