--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>얼굴로 보는 나의 조선시대 신분은?</title>
-    <link rel="alternate" hreflang="ko" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="en" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="es" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="ja" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="zh" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="vi" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="id" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="it" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="th" href="https://josun-face-test.netlify.app/" />
-    <link rel="alternate" hreflang="x-default" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="ko" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="en" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="es" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="ja" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="zh" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="vi" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="id" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="it" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="th" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="x-default" href="https://josun-face-test.netlify.app/en/index.html" />
     <meta name="title" content="조선시대 얼굴 테스트">
     <meta name="subject" content="얼굴로 보는 인공지능 조선의 관상">
     <link rel="stylesheet" href="../../style.css">
