--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         break;
                     case "양반":
                         resultTitle = "하루가 만사편안 양반"
-                        resultExplain = "새월아 내월아 점잖고 예의 바른 사람. 뭐 흠잡을 때가 없구만????"
+                        resultExplain = "세월아 내월아 점잖고 예의 바른 사람. 뭐 흠잡을 때가 없구만????"
                         
                         gtag('event', '남자 결과 양반', {'event_category': '남자 결과'});
                         break;
@@ -335,7 +335,7 @@
                         break;
                     case "기생":
                         resultTitle = "조선시대 미스코리아 기생!!"
-                        resultExplain = "술자리에서 노래나 춤으로 흥을 돋우는 것을 직업, 조선시대의 최고로 '이쁜여성'이 가지는 직업 벼슬을 꿈꿀수도?????"
+                        resultExplain = "술자리에서 노래나 춤으로 흥을 돋우는 것을 직업, 조선시대의 최고로 '이쁜여성'이 가지는 직업. '벼슬을 꿈꿀수도?????'"
                         gtag('event', '여자 결과 기생', {'event_category': '여자 결과'});
                         break;
                     case "노비":
