--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>얼굴로 보는 나의 조선시대 신분은?</title>
-    <link rel="alternate" hreflang="ko" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="ko" href="https://josun-face-test.netlify.app/ko/index.html" />
     <link rel="alternate" hreflang="en" href="https://josun-face-test.netlify.app/en/index.html" />
-    <link rel="alternate" hreflang="es" href="https://josun-face-test.netlify.app/en/index.html" />
-    <link rel="alternate" hreflang="ja" href="https://josun-face-test.netlify.app/en/index.html" />
-    <link rel="alternate" hreflang="zh" href="https://josun-face-test.netlify.app/en/index.html" />
-    <link rel="alternate" hreflang="vi" href="https://josun-face-test.netlify.app/en/index.html" />
-    <link rel="alternate" hreflang="id" href="https://josun-face-test.netlify.app/en/index.html" />
-    <link rel="alternate" hreflang="it" href="https://josun-face-test.netlify.app/en/index.html" />
-    <link rel="alternate" hreflang="th" href="https://josun-face-test.netlify.app/en/index.html" />
-    <link rel="alternate" hreflang="x-default" href="https://josun-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="es" href="https://josun-face-test.netlify.app/es/index.html" />
+    <link rel="alternate" hreflang="ja" href="https://josun-face-test.netlify.app/ja/index.html" />
+    <link rel="alternate" hreflang="zh" href="https://josun-face-test.netlify.app/zh/index.html" />
+    <link rel="alternate" hreflang="vi" href="https://josun-face-test.netlify.app/vi/index.html" />
+    <link rel="alternate" hreflang="id" href="https://josun-face-test.netlify.app/id/index.html" />
+    <link rel="alternate" hreflang="it" href="https://josun-face-test.netlify.app/it/index.html" />
+    <link rel="alternate" hreflang="th" href="https://josun-face-test.netlify.app/th/index.html" />
+    <link rel="alternate" hreflang="x-default" href="https://josun-face-test.netlify.app/" />
     <meta name="title" content="조선시대 얼굴 테스트">
     <meta name="subject" content="얼굴로 보는 인공지능 조선의 관상">
     <link rel="stylesheet" href="../../style.css">
@@ -80,7 +80,7 @@
                 if (ua.match('android') != null) {
                     window.open("https://josun-face-test.netlify.app/"+lang.value+"/index.html"); //android
                 } else if (ua.indexOf("iphone")>-1||ua.indexOf("ipad")>-1||ua.indexOf("ipod")>-1) { 
-                    window.location.href = "https://josun-face-test.netlify.app//"+lang.value+"/index.html";
+                    window.location.href = "https://josun-face-test.netlify.app/"+lang.value+"/index.html";
                 } else {
                     window.location.href = "https://josun-face-test.netlify.app/"+lang.value+"/index.html";
                 }
@@ -90,19 +90,14 @@
         }
     </script>
 
-    <section>
         <div class="kakao-ad-area1">
             <ins class="kakao_ad_area" style="display:none;"
         data-ad-unit = "DAN-8uoI1KMqoWsLUx6P"
-        data-ad-width = "1000"
+        data-ad-width = "880"
         data-ad-height = "180"></ins>
     
         </div>
-    </section>
-
-
-
-
+    
     <section class="section">
         <h1 class="title">조선시대 얼굴로 보는 계층분석</h1>
         <h2 class="subtitle">얼굴로 보는 조선시대 신분 분석</h2>
