--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>얼굴로 보는 나의 조선시대 신분은?</title>
-    <link rel="alternate" hreflang="ko" href="https://josun-face-test.netlify.app/ko/index.html" />
-    <link rel="alternate" hreflang="en" href="https://josun-face-test.netlify.app/en/index.html" />
-    <link rel="alternate" hreflang="es" href="https://josun-face-test.netlify.app/es/index.html" />
-    <link rel="alternate" hreflang="ja" href="https://josun-face-test.netlify.app/ja/index.html" />
-    <link rel="alternate" hreflang="zh" href="https://josun-face-test.netlify.app/zh/index.html" />
-    <link rel="alternate" hreflang="vi" href="https://josun-face-test.netlify.app/vi/index.html" />
-    <link rel="alternate" hreflang="id" href="https://josun-face-test.netlify.app/id/index.html" />
-    <link rel="alternate" hreflang="it" href="https://josun-face-test.netlify.app/it/index.html" />
-    <link rel="alternate" hreflang="th" href="https://josun-face-test.netlify.app/th/index.html" />
-    <link rel="alternate" hreflang="x-default" href="https://josun-face-test.netlify.app/" />
+    <link rel="alternate" hreflang="ko" href="https://joseon-face-test.netlify.app/ko/index.html" />
+    <link rel="alternate" hreflang="en" href="https://joseon-face-test.netlify.app/en/index.html" />
+    <link rel="alternate" hreflang="es" href="https://joseon-face-test.netlify.app/es/index.html" />
+    <link rel="alternate" hreflang="ja" href="https://joseon-face-test.netlify.app/ja/index.html" />
+    <link rel="alternate" hreflang="zh" href="https://joseon-face-test.netlify.app/zh/index.html" />
+    <link rel="alternate" hreflang="vi" href="https://joseon-face-test.netlify.app/vi/index.html" />
+    <link rel="alternate" hreflang="id" href="https://joseon-face-test.netlify.app/id/index.html" />
+    <link rel="alternate" hreflang="it" href="https://joseon-face-test.netlify.app/it/index.html" />
+    <link rel="alternate" hreflang="th" href="https://joseon-face-test.netlify.app/th/index.html" />
+    <link rel="alternate" hreflang="x-default" href="https://joseon-face-test.netlify.app/" />
     <meta name="title" content="조선시대 얼굴 테스트">
     <meta name="subject" content="얼굴로 보는 인공지능 조선의 관상">
     <link rel="stylesheet" href="../../style.css">
@@ -78,14 +78,14 @@
         function changeLanguage(lang) {
             if( ( navigator.userAgent.indexOf('Mac OS') > 0 && navigator.userAgent.indexOf('Safari') <= 0 ) || ( ( navigator.userAgent.indexOf('Android') > 0 && navigator.userAgent.indexOf('wv)') > 0 ) ) ){
                 if (ua.match('android') != null) {
-                    window.open("https://josun-face-test.netlify.app/"+lang.value+"/index.html"); //android
+                    window.open("https://joseon-face-test.netlify.app/"+lang.value+"/index.html"); //android
                 } else if (ua.indexOf("iphone")>-1||ua.indexOf("ipad")>-1||ua.indexOf("ipod")>-1) { 
-                    window.location.href = "https://josun-face-test.netlify.app/"+lang.value+"/index.html";
+                    window.location.href = "https://joseon-face-test.netlify.app/"+lang.value+"/index.html";
                 } else {
-                    window.location.href = "https://josun-face-test.netlify.app/"+lang.value+"/index.html";
+                    window.location.href = "https://joseon-face-test.netlify.app/"+lang.value+"/index.html";
                 }
             } else {
-                window.location.href = "https://josun-face-test.netlify.app/"+lang.value+"/index.html";
+                window.location.href = "https://joseon-face-test.netlify.app/"+lang.value+"/index.html";
             }
         }
     </script>
@@ -171,13 +171,13 @@
     </script>
     <script>
         var disqus_config = function () {
-            this.page.url = "https://josun-face-test.netlify.app/";  
+            this.page.url = "https://joseon-face-test.netlify.app/";  
             this.page.identifier = "ko"; 
         };
         (function() {
         var d = document,
             s = d.createElement('script');
-        s.src = 'https://josun-face-test.netlify.app/';
+        s.src = 'https://joseon-face-test.netlify.app/';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
         })();
@@ -364,8 +364,8 @@
                         gtag('event', '여자 결과 알수없음', {'event_category': '여자 결과'});
                 }
             }
-            var title = "<div class='" + prediction[0].className + "-josun-title'>" + resultTitle + "</div>"
-            var explain = "<div class='josun-explain pt-2'>" + resultExplain + "</div>"
+            var title = "<div class='" + prediction[0].className + "-joseon-title'>" + resultTitle + "</div>"
+            var explain = "<div class='joseon-explain pt-2'>" + resultExplain + "</div>"
             
             $('.result-message').html(title + explain );
             var barWidth;
@@ -424,7 +424,7 @@
                     default:
                         labelTitle = "알수없음"
                 }
-                var label = "<div class='josun-label d-flex align-items-center'>" + labelTitle + "</div>"
+                var label = "<div class='joseon-label d-flex align-items-center'>" + labelTitle + "</div>"
                 var bar = "<div class='bar-container position-relative container'><div class='" + prediction[i].className + "-box'></div><div class='d-flex justify-content-center align-items-center " + prediction[i].className + "-bar' style='width: " + barWidth + "'><span class='d-block percent-text'>" + Math.round(prediction[i].probability.toFixed(2) * 100) + "%</span></div></div>"
                 labelContainer.childNodes[i].innerHTML = label + bar;
             }
