--- a/index.html
+++ b/index.html
@@ -90,13 +90,11 @@
         }
     </script>
 
-        <div class="kakao-ad-area1">
-            <ins class="kakao_ad_area" style="display:none;"
-        data-ad-unit = "DAN-8uoI1KMqoWsLUx6P"
-        data-ad-width = "880"
-        data-ad-height = "180"></ins>
-    
-        </div>
+<ins class="kakao_ad_area" style="display:none;"
+data-ad-unit = "DAN-Gm0rtITfOXKKbuUS"
+data-ad-width = "320"
+data-ad-height = "100"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     
     <section class="section">
         <h1 class="title">조선시대 얼굴로 보는 계층분석</h1>
