--- a/조선 관상 완성본/index.html
+++ b/조선 관상 완성본/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="css/style.css">
 
-    <meta property="og:image" content="C:\Users\USER\Desktop\사이트 이미지.png" />
+    <meta property="og:image" content="https://cdn.pixabay.com/photo/2014/04/02/10/53/crown-304856__340.png" />
     <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"></script>
