--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <meta name="subject" content="얼굴로 보는 인공지능 조선의 관상">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="css/style.css">
-
-    <meta property="og:image" content="https://joseon-face-test.netlify.app/" />
+    <meta property="og:title" content="나의 조선시대 관상/">
+    <meta property="og:description" content="나의 얼굴로 조선시대 신분을 분석 하는 사이트 입니다."/>
+    <meta property="og:image" content="C:\Users\USER\Desktop\사이트 이미지.png"/>
     <link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5e64b3727e862b06"></script>
