--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <meta name="subject" content="얼굴로 보는 인공지능 조선의 관상">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="css/style.css">
-    <!-- <meta property="og:title" content="나의 조선시대 관상/">
+    <meta property="og:title" content="나의 조선시대 관상/">
     <meta property="og:description" content="나의 얼굴로 조선시대 신분을 분석 하는 사이트 입니다."/>
-    <meta property="og:image" content="C:\Users\USER\Desktop\사이트 이미지.png"/> -->
+    <meta property="og:image" content="C:\Users\USER\Desktop\사이트 이미지.png"/>
     
     <script>
         window.dataLayer = window.dataLayer || [];
